--- a/views/base-sidebar.twig
+++ b/views/base-sidebar.twig
@@ -11,7 +11,7 @@
 			<div class="container-fluid content-container">
 
 				{% block header %}
-					<header class="header " >
+					<header class="header row" >
 						<div class="col-md-3 site-description">
 							<h2 class="hdr-name" role="banner">
 								<a href="{{ options.contact_me_page }}" rel="home">
