--- a/views/home-projects.twig
+++ b/views/home-projects.twig
@@ -7,9 +7,10 @@
 			{% set primary_collection = post.terms( 'primary_collection' ) %}
 			<style media="screen">
 				.nav-main-link:hover .module-{{ item.object_id }} {
-					background-image: url({{ image.url }} );
+					background-image: url( {{ image.url }} );
 				}
 			</style>
+			<img src="{{ image.url }}" style="display:none;" />
 			<a class="nav-main-link" href="{{ item.get_link }}">
 				<div class="grid-module-image module-{{ item.object_id }}"></div>
 				<div class="grid-module">
