fixed license info

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,6 @@
 /*
 Theme Name: Alternate.org
-Theme URI: https://github.com/alternatekev/alternate-org
+Theme URI: https://github.com/alternatekev/alternate.org
 Author: Kevin Conboy
 Author URI: https://alternate.org/
 Version: 0.1
