--- a/views/home-links.twig
+++ b/views/home-links.twig
@@ -5,11 +5,11 @@
 		<style media="screen">
 			.nav-main-link .module-{{ item.object_id }} {
 				background-image: url( {{ images[ item.object_id ] }} );
-				-webkit-filter: grayscale( 1 );
-				-webkit-filter: blur( 0.5 );
+				filter: grayscale( 1 );
+				filter: blur( 0.5 );
 			}
 			.nav-main-link:hover .module-{{ item.object_id }} {
-				-webkit-filter: grayscale( 0 );
+				filter: grayscale( 0 );
 			}
 		</style>
 		<img src="{{ images[ item.object_id ] }}" style="display:none;" />
