--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -46,11 +46,15 @@ body {
 }
 
 .sidebar .grid-module{
-	height: 125px;
+	height: 45px !important;
+}
+
+.sidebar .home-projects {
+	margin-top: 72px;
 }
 
 .sidebar .home-projects .featured .grid-module {
-	height: 195px;
+	height: 50px;
 }
 
 
