--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -112,7 +112,7 @@
 	}
 
 	.featured-image.portfolio-image {
-		height: 115px;
+		height: 230px;
 		margin-top: 2px;
 		margin-bottom: -8px;
 		border-radius: 5px;
@@ -147,7 +147,7 @@
 		}
 
 		&:hover img{
-			opacity: 0.9;
+			opacity: 0.75;
 			box-shadow: 0px 0px 70px rgba( 0, 0, 0, 0.55) inset;
 
 		}
@@ -269,6 +269,25 @@
 
 .popup{
 	cursor: pointer;
+
+	.portfolio-description {
+		display: none;
+	}
+}
+
+.portfolio-description {
+	width: 90%;
+	text-align: center;
+	margin: 25px auto 10px auto;
+
+	p {
+		font-size: 20px;
+		text-align: left;
+	}
+}
+
+.portfolio-description.show {
+	display: block;
 }
 
 form{
