removed bounding box around post content

--- a/views/single-page.twig
+++ b/views/single-page.twig
@@ -3,7 +3,7 @@
 <article class="col-md-12 tease tease-{{ post.post_type }}" id="tease-{{ post.ID }}" >
 	<div class="entry-content">
 		{% block content %}
-			<div class="grid-module-image row">
+			<div class="row">
 				<div class="col-md-6">
 					<h1>{{ post.title }}</h1>
 					{{ post.content }}
