--- a/views/post.twig
+++ b/views/post.twig
@@ -7,7 +7,7 @@
 
 	<div class="entry-content">
 		{% block content %}
-			<div class="grid-module-image row">
+			<div class="row">
 				<div class="col-md-12">
 					<h1>{{ post.title }}</h1>
 				</div>
