--- a/views/404.twig
+++ b/views/404.twig
@@ -1,5 +1,10 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	Sorry, we couldn't find what you're looking for.
+
+		<h2>Hmm, that's not a thing here.</h2>
+		<p>Maybe look at some projects instead?</p>
+
+	{% include "home-projects.twig" %}
+
 {% endblock %}
