--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -1,38 +1,43 @@
 @import "colors";
 
-$display: 	'Macula Background', 'San Francisco', 'Helvetica', 'Arial', sans;
+$display: 	'Bullen Bd', 'San Francisco', 'Helvetica', 'Arial', sans;
 $text: 	'Helsinki', 'San Franisco', 'Helvetica Condensed', 'Arial Condensed', 'Helvetica', 'Arial', sans;
 
+$super:	32px;
 $largest: 	28px;
 $large: 	24px;
 $medium: 	20px;
 $regular: 	18px;
 $small: 	14px;
 
-h1, h2, h3 { font-family: $display; font-weight: normal; font-style: normal; -webkit-font-smoothing: antialiased; }
-h4, h5, h6 { font-family: $text; font-weight: normal; font-style: normal; -webkit-font-smoothing: antialiased; }
+h1 { font-family: $display; font-weight: normal; font-style: normal; -webkit-font-smoothing: antialiased; }
+h2, h3, h4, h5, h6 { font-family: $text; font-weight: normal; font-style: normal; -webkit-font-smoothing: antialiased; }
 strong, p, li, em, div { font-family: $text; font-weight: normal; font-style: normal; -webkit-font-smoothing: antialiased; }
 
 header {
 	h1.description {
-		font-size: 			$large;
+		font-size: 			$largest;
 		padding-top: 		14px;
+		text-transform: 		uppercase;
 	}
 
 	h1 {
-		font-size: $large;
+		font-size: $largest;
 	}
 
 	h2 {
 		font-size: 			$regular;
+		line-height: 		0.75;
 
 		.description {
 			display: 		block;
 			opacity: 		$dimmed;
+			text-transform: 	uppercase;
+			font-family: 	$display; font-weight: normal; font-style: normal; -webkit-font-smoothing: antialiased;
 
 			&.hdr-logo-link {
 				padding-top: 4px;
-				font-size: $small;
+				font-size:  $regular;
 				opacity: 	$half;
 			}
 		}
