--- a/views/html-header.twig
+++ b/views/html-header.twig
@@ -14,6 +14,7 @@
         </title>
     <meta name="description" content="{{site.description}}">
     <link href="//cloud.webtype.com/css/377b2bc5-8623-442b-804b-9c2c7aab6612.css" rel="stylesheet" type="text/css" />
+    <link href="http://cloud.typenetwork.com/projects/54/fontface.css/" rel="stylesheet" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
