--- a/views/base-sidebar.twig
+++ b/views/base-sidebar.twig
@@ -22,8 +22,10 @@
 						</div>
 						<div class="col-md-3 site-name">
 							<h2 class="hdr-name" role="banner">
-								<a class="hdr-logo-link description" href="/" rel="home">{{ site.name }}</a>
-								<small class="domain">{{ site.description }}</small>
+								<a href="/" rel="home">
+									<span class="description">{{ site.name }}</span>
+									<small>{{ site.description }}</small>
+								</a>
 							</h2>
 						</div>
 					</header>
