adding featured css class support to non-project links

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -40,9 +40,13 @@ body {
 
 .grid-module {
 	//background: rgba( 255, 255, 255, 0.5 );
-	height: 250px;
+	height: 125px;
 	z-index: 100;
 	position: relative;
+
+	&.featured {
+		height: 250px;
+	}
 }
 
 .sidebar .grid-module{
