--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -14,6 +14,10 @@ h1 { font-family: $display; font-weight: normal; font-style: normal; -webkit-fon
 h2, h3, h4, h5, h6 { font-family: $text; font-weight: normal; font-style: normal; -webkit-font-smoothing: antialiased; }
 strong, p, li, em, div { font-family: $text; font-weight: normal; font-style: normal; -webkit-font-smoothing: antialiased; }
 
+h1, h2, h3, h4, h5, h6, p, strong, li, a {
+	color: #FFF;
+}
+
 header {
 	h1.description {
 		font-size: 			$largest;
