--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -16,6 +16,7 @@ strong, p, li, em, div { font-family: $text; font-weight: normal; font-style: no
 
 h1, h2, h3, h4, h5, h6, p, strong, li, a {
 	color: #FFF;
+	opacity: $dimmed;
 }
 
 header {
